--- a/pipeline/templates/buildspec_apply.yml
+++ b/pipeline/templates/buildspec_apply.yml
@@ -9,7 +9,7 @@ version: 0.2
 env:
   variables:
     CODE_SRC_DIR: "."
-    TF_VERSION: "1.3.7"
+    TF_VERSION: "1.9.0"
 
 phases:
   install:
@@ -23,6 +23,7 @@ phases:
   build:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
+      - "python3 -m venv .venv && source .venv/bin/activate"
       - "echo ## TERRAFORM APPLY : Starting with the Terraform Apply"
       - "terraform apply -input=false tfapply"
 
