--- a/pipeline/templates/buildspec_validate.yml
+++ b/pipeline/templates/buildspec_validate.yml
@@ -10,7 +10,7 @@ env:
   variables:
     CODE_SRC_DIR: "."
     SCRIPT_DIR: "./templates/scripts"
-    TF_VERSION: "1.3.7"
+    TF_VERSION: "1.9.0"
     ENVIRONMENT: "dev"
     SKIPVALIDATIONFAILURE: "Y"
     ENABLE_TFVALIDATE: "Y"
@@ -40,6 +40,7 @@ phases:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
       - "echo ## TERRAFORM INIT : Initialize the Terraform Workspace"
+      - "python3 -m venv .venv && source .venv/bin/activate"      
       - "terraform init"
       - "echo ## VALIDATION : Starting ..."
       - "mkdir -p ${CODEBUILD_SRC_DIR}/reports"
