--- a/pipeline/templates/buildspec_validate.yml
+++ b/pipeline/templates/buildspec_validate.yml
@@ -10,7 +10,7 @@ env:
   variables:
     CODE_SRC_DIR: "."
     SCRIPT_DIR: "./templates/scripts"
-    TF_VERSION: "1.9.0"
+    TF_VERSION: "1.10.0"
     ENVIRONMENT: "dev"
     SKIPVALIDATIONFAILURE: "Y"
     ENABLE_TFVALIDATE: "Y"
@@ -31,31 +31,31 @@ phases:
       - "rm terraform.zip"
       - "yum update -y"
       - "yum install -y curl jq awscli"
-      - "pip3 install checkov"
-      - "yum install -y golang"
-      - "wget -q -O tfsec https://github.com/aquasecurity/tfsec/releases/download/${TFSEC_VERSION}/tfsec-linux-amd64"
-      - "chmod +x ./tfsec"
-      - "mv ./tfsec /usr/local/bin/tfsec"
+      # - "pip3 install checkov"
+      # - "yum install -y golang"
+      # - "wget -q -O tfsec https://github.com/aquasecurity/tfsec/releases/download/${TFSEC_VERSION}/tfsec-linux-amd64"
+      # - "chmod +x ./tfsec"
+      # - "mv ./tfsec /usr/local/bin/tfsec"
   build:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
       - "echo ## TERRAFORM INIT : Initialize the Terraform Workspace"
       - "python3 -m venv .venv && source .venv/bin/activate"      
       - "terraform init"
-      - "echo ## VALIDATION : Starting ..."
-      - "mkdir -p ${CODEBUILD_SRC_DIR}/reports"
-      - "/bin/bash ${CODEBUILD_SRC_DIR}/${SCRIPT_DIR}/tf_ssp_validation.sh ${SKIPVALIDATIONFAILURE} ${ENABLE_TFVALIDATE} ${ENABLE_TFFORMAT} ${ENABLE_TFCHECKOV} ${ENABLE_TFSEC}"
-      - "cp checkov.xml ${CODEBUILD_SRC_DIR}/reports/checkov.xml"
-      - "cp tfsec-junit.xml ${CODEBUILD_SRC_DIR}/reports/tfsec-junit.xml"
+      # - "echo ## VALIDATION : Starting ..."
+      # - "mkdir -p ${CODEBUILD_SRC_DIR}/reports"
+      # - "/bin/bash ${CODEBUILD_SRC_DIR}/${SCRIPT_DIR}/tf_ssp_validation.sh ${SKIPVALIDATIONFAILURE} ${ENABLE_TFVALIDATE} ${ENABLE_TFFORMAT} ${ENABLE_TFCHECKOV} ${ENABLE_TFSEC}"
+      # - "cp checkov.xml ${CODEBUILD_SRC_DIR}/reports/checkov.xml"
+      # - "cp tfsec-junit.xml ${CODEBUILD_SRC_DIR}/reports/tfsec-junit.xml"
 artifacts:
   files:
     - '**/*'
-reports:
-  checkov-reports:
-    files:
-      - "./reports/checkov.xml"
-    file-format: "JUNITXML"
-  tfsec-reports:
-    files:
-      - "./reports/tfsec-junit.xml"
-    file-format: "JUNITXML"
+# reports:
+#   checkov-reports:
+#     files:
+#       - "./reports/checkov.xml"
+#     file-format: "JUNITXML"
+#   tfsec-reports:
+#     files:
+#       - "./reports/tfsec-junit.xml"
+#     file-format: "JUNITXML"
