fix: pipeline reference

--- a/pipeline/templates/buildspec_plan.yml
+++ b/pipeline/templates/buildspec_plan.yml
@@ -23,7 +23,7 @@ phases:
   build:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
-      - "python3 -m venv .venv && source .venv/bin/activate"      
+      # - "python3 -m venv .venv && source .venv/bin/activate"      
       - "echo ## TERRAFORM PLAN : Generate the Terraform Plan"
       - "terraform plan -out tfapply"
 artifacts:
