--- a/pipeline/templates/buildspec_destroy.yml
+++ b/pipeline/templates/buildspec_destroy.yml
@@ -24,7 +24,7 @@ phases:
   build:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
-      - "python3 -m venv .venv && source .venv/bin/activate"      
+      # - "python3 -m venv .venv && source .venv/bin/activate"      
       - "terraform destroy --auto-approve"
 
 artifacts:
