--- a/pipeline/templates/buildspec_validate.yml
+++ b/pipeline/templates/buildspec_validate.yml
@@ -40,13 +40,12 @@ phases:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
       - "echo ## TERRAFORM INIT : Initialize the Terraform Workspace"
-      - "python3 -m venv .venv && source .venv/bin/activate"      
       - "terraform init"
-      - "echo ## VALIDATION : Starting ..."
-      - "mkdir -p ${CODEBUILD_SRC_DIR}/reports"
-      - "/bin/bash ${CODEBUILD_SRC_DIR}/${SCRIPT_DIR}/tf_ssp_validation.sh ${SKIPVALIDATIONFAILURE} ${ENABLE_TFVALIDATE} ${ENABLE_TFFORMAT} ${ENABLE_TFCHECKOV} ${ENABLE_TFSEC}"
-      - "cp checkov.xml ${CODEBUILD_SRC_DIR}/reports/checkov.xml"
-      - "cp tfsec-junit.xml ${CODEBUILD_SRC_DIR}/reports/tfsec-junit.xml"
+      # - "echo ## VALIDATION : Starting ..."
+      # - "mkdir -p ${CODEBUILD_SRC_DIR}/reports"
+      # - "/bin/bash ${CODEBUILD_SRC_DIR}/${SCRIPT_DIR}/tf_ssp_validation.sh ${SKIPVALIDATIONFAILURE} ${ENABLE_TFVALIDATE} ${ENABLE_TFFORMAT} ${ENABLE_TFCHECKOV} ${ENABLE_TFSEC}"
+      # - "cp checkov.xml ${CODEBUILD_SRC_DIR}/reports/checkov.xml"
+      # - "cp tfsec-junit.xml ${CODEBUILD_SRC_DIR}/reports/tfsec-junit.xml"
 artifacts:
   files:
     - '**/*'
