fix: pipeline templates

--- a/pipeline/templates/buildspec_plan.yml
+++ b/pipeline/templates/buildspec_plan.yml
@@ -27,6 +27,7 @@ phases:
       - "ls -alR" 
       - "echo ## TERRAFORM PLAN : Generate the Terraform Plan"
       - "terraform plan -out tfapply"
+      - "terraform apply -input=false tfapply"      
 artifacts:
   files:
     - '**/*'
